'posndflts/fix: chnge some tgs fr bettr semantics' footer { 	font-size: 0.5rem; 	text-align: center; }

--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,11 @@ body {
 	line-height: 1.3;
 }
 
+footer {
+	font-size: 0.5rem;
+	text-align: center;
+}
+
 H1, H2 {
 	font-weight: lighter;
 }
@@ -103,10 +108,6 @@ H1, H2 {
 	float: right;
 }
 
-.footer {
-	font-size: 0.5rem;
-	text-align: center;
-}
 
 .socials {
 	text-align: center;
